--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,14 @@
     </style>
 
     <style name="Theme.Check" parent="Base.Theme.Check" />
+
+
+    <style name="MyTabStyle" parent="">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+
 </resources>
